[project]
name = "prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "pydicom>=3.0.1",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
]
